--- a/ApiNet6.csproj
+++ b/ApiNet6.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+    <!-- Añadiendo para poder comentar las request de la Api  -->
+  <PropertyGroup>
+  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  <NoWarn>$(NoWarn);1591</NoWarn> 
+  </PropertyGroup>
+
 </Project>
