--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,3012,;Database=ApiNet6;Uid=sa;Pwd=MyPass@wordApi;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=localhost,3012,;Database=ApiNet6;Uid=sa;Pwd=MyPass@wordApi;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=demo-serveraa.database.windows.net;Database=demodb;Uid=admindemo;Pwd=MyPass@word;TrustServerCertificate=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
