--- a/ApiNet6.csproj
+++ b/ApiNet6.csproj
@@ -14,9 +14,13 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
   </ItemGroup>
 
     <!-- Añadiendo para poder comentar las request de la Api  -->
+  <ItemGroup>
+    <None Remove="Swashbuckle.AspNetCore.Annotations" />
+  </ItemGroup>
   <PropertyGroup>
   <GenerateDocumentationFile>true</GenerateDocumentationFile>
   <NoWarn>$(NoWarn);1591</NoWarn> 
